fix navbar responsive and collapse with media size 480 font fix

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -9,8 +9,9 @@
 }
 
 @media (max-width: 480px) {
-  .navbar-default .navbar-brand {
-    padding-top: 0 !important;
+  .navbar-default .navbar-brand a {
+    font-size: 1.5em;
+    font-style: normal;
   }
 }
 
